# MyNote

./: .gitignore  AGENTS.md  Coding_Log.md  README.md  package-lock.json  package.json  plan.md
desktop/: README.md  runtime-update-manifest.example.json
docs/: website-technical-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html  styles.css
web/src/: app.js  markdown.js  platform.js  storage.js  tauri-storage.js  workspace-format.js
