[package]
name = "mynote"
version = "0.1.0"
description = "Local diary and essay desktop app"
authors = ["MyNote"]
edition = "2021"

[lib]
name = "mynote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
